[package]
name = "kolibri-embedded-gui"
version = "0.0.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Yannik Bretschneider <me@yandrik.dev>"]
description = "embedded-graphics based GUI framework made to be as lightweight as its namesake"
readme = "README.md"
repository = "https://github.com/Yandrik/kolibri"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "^0.8"
embedded-iconoir = { version = "0.2.2", features = ["all-resolutions"] }
heapless = { version = "^0.7", features = ["serde", "ufmt-impl"] }

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"
profont = "0.7.0"
ibm437 = "0.3.2"
az = "1.1"
ansi-parser = { version = "0.8.0", default-features = false }
object-chain = "0.1"

[[example]]
name = "basic-example"

[[example]]
name = "basic-example-incremental-redraw"

[[example]]
name = "theming"

[[example]]
name = "experimenting"

[[example]]
name = "motion-scheduler"

[[example]]
name = "keyboard"
