[package]
name = "kolibri-embedded-gui"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "^0.8"
embedded-iconoir = { version = "0.2.1", features = ["all-resolutions"] }
heapless = "^0.7"

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"
