[package]
name = "kolibri-embedded-gui"
version = "0.0.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Yannik Bretschneider <me@yandrik.dev>"]
description = "embedded-graphics based GUI framework made to be as lightweight as its namesake"
readme = "../README.md"
repository = "https://github.com/Yandrik/kolibri"

[features]
std-debug = []


[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "^0.8"
embedded-iconoir = { version = "0.2.2", features = ["all-resolutions"] }
foldhash = { version = "0.1.3", default-features = false }
heapless = { version = "^0.7", features = ["serde", "ufmt-impl"] }

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"
